Fix: updates to plant img overlapping on navBar

--- a/src/components/MyPlants/MyPlants.css
+++ b/src/components/MyPlants/MyPlants.css
@@ -36,7 +36,7 @@
 }
 
 .header-plant-count {
-  margin-left: 7.3em;
+  margin-left: 7.4em;
 }
 
 .header-plant-name {
@@ -44,12 +44,9 @@
 }
 
 .header-plant-room {
-  margin-left: 24em;
+  margin-left: 24.3em;
 }
 
-.single-plant-rooms {
-  scale: 0.5;
-}
 
 .my-rooms-container,
 .search-bar-container,
