--- a/src/components/MyPlants/sub/SinglePlantRooms.css
+++ b/src/components/MyPlants/sub/SinglePlantRooms.css
@@ -1,33 +1,32 @@
-.single-plant-rooms{
-    width: 18vw;
-    height: 18vw;
-    min-height: 30vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    box-sizing: border-box;
+.single-plant-rooms {
+  max-height: 20vh;
+  margin-right: 3em;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  box-sizing: border-box;
 }
-.plant-image-rooms{
-    width: 80%;
-    height: 80%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.plant-name-rooms{
-    font-size: 1.5em;
-    padding-top: 0.5em;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    font-weight: 600;
-    color:var(--light-grey-text-color)
-    
+.plant-image-rooms {
+  width: 10vw;
+  height: 10vw;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.single-plant-rooms:hover{
-    border: 1px solid #8f8888;
-    cursor: pointer;
+.plant-name-rooms {
+  font-size: 1em;
+  padding-top: 0.5em;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  font-weight: 600;
+  color: var(--light-grey-text-color);
+}
+
+.single-plant-rooms:hover {
+  border: 1px solid #8f8888;
+  cursor: pointer;
 }
